--- a/sass/components/_checkbox.scss
+++ b/sass/components/_checkbox.scss
@@ -3,17 +3,20 @@
 
   &__label {
     @include position(relative, null, null, null, null);
-    @extend %block;
+    display: block;
     @include margin(null, null, 30px, null);
-    @include padding(null, null, null, 37px);
-    @include font(400, 14px, 1.71, 00.03em);
+    @include padding(null, null, null, 24px);
+    @include font(400, 12px, 1.17, 00.03em);
+
+    @media screen and (min-width: 1200px) {
+      @include padding(null, null, null, 37px);
+      @include font(null, 14px, 1.71, null);
+    }
 
     color: getColor('primary');
   }
 
   &__input {
-    -webkit-appearance: none;
-    -moz-appearance: none;
     appearance: none;
   }
 
@@ -22,13 +25,19 @@
   }
 
   &__icon--off-checked {
-    @include position(absolute, 50%, null, null, 14px);
-
-    transform: translateY(-50%);
+    position: absolute;
+    top: 0;
+    left: 0;
     opacity: 1;
     fill: getColor('text');
 
     @include transition(fill, opacity, null, 250ms, cubic-bezier(0.4, 0, 0.2, 1));
+
+    @media screen and (min-width: 1200px) {
+      top: 50%;
+      left: 14px;
+      transform: translateY(-50%);
+    }
   }
 
   &__input:focus ~ &__icon--off-checked {
@@ -41,12 +50,17 @@
 
   &__icon--on-checked {
     position: absolute;
-    top: 50%;
-    left: 14px;
-    transform: translateY(-50%);
+    top: 0;
+    left: 0;
     opacity: 0;
 
     @include transition(opacity, null, null, 250ms, cubic-bezier(0.4, 0, 0.2, 1));
+
+    @media screen and (min-width: 1200px) {
+      top: 50%;
+      left: 14px;
+      transform: translateY(-50%);
+    }
   }
 
   &__input:checked ~ &__icon--on-checked {
