--- a/sass/components/_customers.scss
+++ b/sass/components/_customers.scss
@@ -1,11 +1,23 @@
 .customers {
+  @include flex(null, null, center, center);
+
   &__link {
     @include flex(null, null, center, center);
-
-    @extend %style--customers__link;
+    width: 210px;
+    height: 92px;
+    border: 1px solid getColor('icon-link');
+    border-radius: 4px;
 
     color: getColor('icon-link');
     @include transition(border-color, color, null, 250ms, cubic-bezier(0.4, 0, 0.2, 1));
+
+    @media screen and (min-width: 768px) {
+      width: 226px;
+    }
+
+    @media screen and (min-width: 1200px) {
+      width: 170px;
+    }
 
     &:hover,
     &:focus {
