--- a/sass/components/_modal.scss
+++ b/sass/components/_modal.scss
@@ -2,13 +2,26 @@
   @include position(absolute, 50%, null, null, 50%);
   @include padding(40px, 40px, 40px, 40px);
 
-  @extend %style--modal;
+  width: 290px;
+  height: auto;
+
+  border-radius: 4px;
+  box-shadow: 0px 1px 3px rgba(0, 0, 0, 0.12), 0px 1px 1px rgba(0, 0, 0, 0.14),
+    0px 2px 1px rgba(0, 0, 0, 0.2);
 
   background: getColor('secondary');
 
   transform: translate(-50%, -50%) scale(1);
 
   @include transition(transform, null, null, 250ms, cubic-bezier(0.4, 0, 0.2, 1));
+
+  @media screen and (min-width: 480px) {
+    width: 450px;
+  }
+
+  @media screen and (min-width: 1200px) {
+    width: 528px;
+  }
 
   .backdrop--is-hidden & {
     transform: translate(-50%, -50%) scale(0.8);
@@ -21,11 +34,18 @@
   &__title {
     @include margin(null, null, 12px, null);
 
-    @include font(700, 20px, 1.15, 00.03em);
+    @include font(700, 16px, 1.5, 00.03em);
 
-    @extend %centerText;
-
+    text-align: center;
     color: getColor('text');
+
+    @media screen and (min-width: 480px) {
+      @include font(null, 20px, null, null);
+    }
+
+    @media screen and (min-width: 1200px) {
+      @include font(null, null, 1.15, null);
+    }
   }
 
   &__form {
