--- a/sass/components/_socials.scss
+++ b/sass/components/_socials.scss
@@ -2,7 +2,7 @@
   &__list {
     @include flex(null, null, center, center);
     @include margin(null, null, null, -10px);
-    @extend %noListStyle;
+    list-style: none;
   }
 
   &__item {
@@ -11,7 +11,9 @@
 
   &__link {
     @include flex(null, null, center, center);
-    @extend %style--socialsLink;
+    width: 44px;
+    height: 44px;
+    border-radius: 50%;
 
     color: getColor('secondary');
     background-color: getColor('socials--footer');
