--- a/sass/main.scss
+++ b/sass/main.scss
@@ -29,5 +29,8 @@
 @import 'components/input-group';
 @import 'components/comment';
 @import 'components/checkbox';
-
-// @import 'utils/shadows';
+@import 'components/mobile-menu';
+@import 'components/_mobile-nav';
+@import 'components/mobile-contacts';
+@import 'components/mobile-socials';
+@import 'components/menu-btn';
