--- a/sass/components/_comment.scss
+++ b/sass/components/_comment.scss
@@ -2,35 +2,44 @@
   width: 100%;
 
   &__label {
-    @extend %block;
+    display: block;
     @include margin(null, null, 20px, null);
     @include font(400, 12px, 1.17, 00.01em);
 
     color: getColor('primary');
 
-    @extend %pointerCursor;
+    cursor: pointer;
   }
 
   &__text {
-    @extend %block;
+    display: block;
+    width: 100%;
+    height: 120px;
+
     @include margin(4px, null, null, null);
-
-    @extend %style--comment__text;
-
     @include padding(12px, 16px, 12px, 16px);
+
+    border: 1px solid rgba(33, 33, 33, 0.2);
+    border-radius: 4px;
+    outline: none;
+    resize: none;
 
     @include transition(border, null, null, 250ms, cubic-bezier(0.4, 0, 0.2, 1));
 
-    @extend %pointerCursor;
+    cursor: pointer;
 
     &:focus {
       border-color: getColor('accent');
     }
 
     &::placeholder {
-      @include font(400, 12px, 1.17, 00.01em);
+      @include font(400, 14px, 1.14, 00.01em);
 
       color: rgba(117, 117, 117, 0.5);
+
+      @media screen and (min-width: 1200px) {
+        @include font(null, 12px, 1.17, null);
+      }
     }
   }
 }
