--- a/sass/components/_contacts.scss
+++ b/sass/components/_contacts.scss
@@ -1,25 +1,41 @@
 .contacts {
-  @include font(500, 14px, 1.14, 0.02em);
+  @include font(500, 12px, 1.17, 0.02em);
+
+  @media screen and (min-width: 1200px) {
+    @include font(null, 14px, 1.14, null);
+  }
 
   &__list {
-    @include flex(null, null, null, center);
+    @include flex(column, null, center, flex-start);
+    @include margin(null, null, -10px, null);
 
-    @extend %noListStyle;
-    @include margin(null, null, null, -50px);
+    list-style: none;
+
+    @media screen and (min-width: 1200px) {
+      @include flex(row, null, null, center);
+      @include margin(null, null, null, -50px);
+    }
   }
 
   &__item {
-    @include margin(null, null, null, 50px);
+    @include margin(null, null, 10px, null);
+
+    @media screen and (min-width: 1200px) {
+      @include margin(null, null, null, 50px);
+    }
   }
 
   &__link {
     @include flex(null, null, null, center);
-    @include padding(32px, null, 32px, null);
 
     color: getColor('primary');
     text-decoration: none;
 
     @include transition(color, null, null, 250ms, cubic-bezier(0.4, 0, 0.2, 1));
+
+    @media screen and (min-width: 1200px) {
+      @include padding(32px, null, 32px, null);
+    }
 
     &:hover,
     &:focus {
@@ -29,6 +45,7 @@
 
   &__icon {
     fill: currentColor;
+
     &--start {
       @include margin(null, 10px, null, null);
     }
