--- a/sass/components/_container.scss
+++ b/sass/components/_container.scss
@@ -1,7 +1,20 @@
 .container {
-  width: 1200px;
+  width: 320px;
+
   @include margin(null, auto, null, auto);
   @include padding(null, 15px, null, 15px);
+
+  @media screen and (min-width: 480px) {
+    width: 480px;
+  }
+
+  @media screen and (min-width: 768px) {
+    width: 768px;
+  }
+
+  @media screen and (min-width: 1200px) {
+    width: 1200px;
+  }
 
   &--hero {
     @include flex(column, null, center, center);
