--- a/sass/components/_input-group.scss
+++ b/sass/components/_input-group.scss
@@ -3,25 +3,30 @@
 
   &__label {
     @include position(relative, null, null, null, null);
+    display: block;
+    width: 100%;
     @include margin(null, null, 10px, null);
-    @include font(400, 12px, 1.17, 00.01em);
 
-    @extend %style--input-group__label;
+    @include font(400, 12px, 1.17, 00.01em);
 
     color: getColor('primary');
 
-    @extend %pointerCursor;
+    cursor: pointer;
   }
 
   &__input {
     @include margin(4px, null, null, null);
     @include padding(0, 42px, 0, 42px);
 
-    @extend %style--input-group__input;
+    width: 100%;
+    height: 40px;
+    outline: none;
+    border: 1px solid rgba(33, 33, 33, 0.2);
+    border-radius: 4px;
 
     @include transition(border, null, null, 250ms, cubic-bezier(0.4, 0, 0.2, 1));
 
-    @extend %pointerCursor;
+    cursor: pointer;
 
     &:focus {
       border-color: getColor('accent');
