--- a/sass/components/_projects-card.scss
+++ b/sass/components/_projects-card.scss
@@ -1,8 +1,25 @@
 .projects-card {
+  width: 290px;
+  height: 100%;
+
   @include font(400, 18px, 1.56, 00.03em);
 
+  @media screen and (min-width: 480px) {
+    width: 450px;
+  }
+
+  @media screen and (min-width: 768px) {
+    width: 354px;
+  }
+
+  @media screen and (min-width: 1200px) {
+    width: 370px;
+  }
+
   &__link {
-    @extend %block;
+    display: flex;
+    flex-direction: column;
+    height: 100%;
     text-decoration: none;
 
     @include transition(box-shadow, null, null, 250ms, cubic-bezier(0.4, 0, 0.2, 1));
@@ -20,13 +37,15 @@
   }
 
   &__image {
-    @extend %image-block;
+    display: block;
+    max-width: 100%;
+    height: auto;
   }
 
   &__text {
     @include position(absolute, 0, null, null, 0);
     height: 100%;
-    @include padding(63px, 24px, 63px, 24px);
+    @include padding(15px, 15px, 15px, 15px);
 
     color: getColor('secondary');
     background: getColor('background--everflow');
@@ -34,6 +53,18 @@
     transform: translateY(101%);
 
     @include transition(transform, null, null, 250ms, cubic-bezier(0.4, 0, 0.2, 1));
+
+    @media screen and (min-width: 480px) {
+      @include padding(77px, 24px, 77px, 24px);
+    }
+
+    @media screen and (min-width: 768px) {
+      @include padding(49px, null, 49px, null);
+    }
+
+    @media screen and (min-width: 1200px) {
+      @include padding(63px, null, 63px, null);
+    }
   }
 
   &__link:hover &__text,
@@ -42,9 +73,12 @@
   }
 
   &__desc {
+    flex-grow: 1;
     @include padding(20px, 24px, 20px, 24px);
 
-    @extend %style--projects-card__desc;
+    border-right: 1px solid getColor('border--projects-card');
+    border-bottom: 1px solid getColor('border--projects-card');
+    border-left: 1px solid getColor('border--projects-card');
   }
 
   &__name {
@@ -56,6 +90,7 @@
 
   &__type {
     color: getColor('primary');
+
     @include font(null, 16px, 1.87, 00.03em);
   }
 }
