--- a/sass/components/_team-card.scss
+++ b/sass/components/_team-card.scss
@@ -1,23 +1,45 @@
 .team-card {
   background: getColor('secondary');
 
-  @extend %style--team-card;
+  box-shadow: 0px 1px 3px rgba(0, 0, 0, 0.12), 0px 1px 1px rgba(0, 0, 0, 0.14),
+    0px 2px 1px rgba(0, 0, 0, 0.2);
+  border-radius: 0px 0px 4px 4px;
 
   &__image {
-    @extend %image-block;
+    display: block;
+    max-width: 100%;
+    height: auto;
+    width: 290px;
+
+    @media screen and (min-width: 480px) {
+      width: 450px;
+    }
+
+    @media screen and (min-width: 768px) {
+      width: 354px;
+    }
+
+    @media screen and (min-width: 1200px) {
+      width: 270px;
+    }
   }
 
   &__desc {
-    @include padding(30px, 32px, 30px, 32px);
+    @include padding(30px, 15px, 24px, 15px);
+
+    @media screen and (min-width: 1200px) {
+      @include padding(30px, 32px, 30px, 32px);
+    }
   }
 
   &__name {
     @include margin(null, null, 10px, null);
 
     color: getColor('text');
+
     @include font(500, 16px, 1.19, 00.03em);
 
-    @extend %centerText;
+    text-align: center;
   }
 
   &__text {
@@ -26,6 +48,6 @@
     color: getColor('primary');
     @include font(null, 16px, 1.19, 00.03em);
 
-    @extend %centerText;
+    text-align: center;
   }
 }
