--- a/sass/utils/_placeholders.scss
+++ b/sass/utils/_placeholders.scss
@@ -38,11 +38,11 @@
 
   @media screen and (min-width: 768px) {
     background-image: linear-gradient(getColor('gradient--hero'), getColor('gradient--hero')),
-      url(../../images/hero-landscape-wide.jpg);
+      url(./../images/hero-landscape-wide.jpg);
 
     @media (min-device-pixel-ratio: 2), (min-resolution: 192dpi), (min-resolution: 2dppx) {
       background-image: linear-gradient(getColor('gradient--hero'), getColor('gradient--hero')),
-        url(../../images/hero-landscape-wide@2x.jpg);
+        url(./../images/hero-landscape-wide@2x.jpg);
     }
   }
 }
