--- a/sass/components/_address.scss
+++ b/sass/components/_address.scss
@@ -9,16 +9,10 @@
   }
 
   &__list {
-    @include margin(null, null, -8px, null);
-
     list-style: none;
-
-    @media screen and (min-width: 1200px) {
-      @include margin(null, null, -9px, null);
-    }
   }
 
-  &__item {
+  &__item:not(:last-child) {
     @include margin(null, null, 8px, null);
 
     @media screen and (min-width: 1200px) {
