--- a/sass/components/_modal.scss
+++ b/sass/components/_modal.scss
@@ -2,7 +2,7 @@
   @include position(absolute, 50%, null, null, 50%);
   @include padding(40px, 40px, 40px, 40px);
 
-  width: 290px;
+  width: calc(100% - 2 * 15px);
   height: auto;
 
   border-radius: 4px;
