--- a/sass/components/_filter.scss
+++ b/sass/components/_filter.scss
@@ -26,8 +26,9 @@
   &__btn {
     @include padding(6px, 22px, 6px, 22px);
 
+    border: none;
+
     border-radius: 4px;
-    border-color: transparent;
 
     background-color: getColor('background');
     color: getColor('text');
