--- a/sass/components/_menu-btn.scss
+++ b/sass/components/_menu-btn.scss
@@ -8,6 +8,8 @@
   border: none;
   background-color: transparent;
 
+  @include transition(color, null, null, 250ms, cubic-bezier(0.4, 0, 0.2, 1));
+
   @media screen and (min-width: 768px) {
     display: none;
   }
