--- a/sass/components/_mobile-nav.scss
+++ b/sass/components/_mobile-nav.scss
@@ -18,6 +18,8 @@
 
     &--current {
       color: getColor('accent');
+
+      @include transition(color, null, null, 250ms, cubic-bezier(0.4, 0, 0.2, 1));
     }
 
     &:hover,
