--- a/sass/components/_mobile-socials.scss
+++ b/sass/components/_mobile-socials.scss
@@ -3,6 +3,7 @@
 
   &__list {
     display: flex;
+    flex-wrap: wrap;
 
     @include margin(null, null, null, -10px);
 
@@ -10,7 +11,7 @@
   }
 
   &__item {
-    @include margin(null, null, null, 10px);
+    @include margin(20px, null, null, 10px);
     @include padding(null, 10px, null, null);
 
     &:not(:last-child) {
@@ -20,12 +21,15 @@
   &__link {
     text-decoration: none;
 
-    @include font(500, 12px, 1.22, 00.02em);
+    @include font(null, 18px, null, null);
 
     color: getColor('accent');
 
-    @media screen and (min-width: 480px) {
-      @include font(null, 18px, null, null);
+    @include transition(color, null, null, 250ms, cubic-bezier(0.4, 0, 0.2, 1));
+
+    &:hover,
+    &:focus {
+      color: getColor('primary');
     }
   }
 }
