--- a/sass/components/_section.scss
+++ b/sass/components/_section.scss
@@ -8,6 +8,7 @@
   &--hero {
     max-width: 768px;
     height: 400px;
+    @include padding(0, null, 0, null);
 
     @include flex(null, null, center, center);
 
@@ -55,11 +56,15 @@
     &--hero {
       @include margin(null, null, 30px, null);
 
-      @include font(900, 26px, 1.62, 0.06em);
+      @include font(900, 20px, 1.62, 0.06em);
 
       color: getColor('secondary');
 
       text-transform: uppercase;
+
+      @media screen and (min-width: 480px) {
+        @include font(900, 26px, 1.62, 0.06em);
+      }
 
       @media screen and (min-width: 1200px) {
         @include font(900, 44px, 1.36, 0.06em);
