--- a/sass/components/_subscription.scss
+++ b/sass/components/_subscription.scss
@@ -27,7 +27,7 @@
   }
 
   &__input {
-    @include margin(20px, null, 20px, null);
+    @include margin(20px, null, null, null);
     @include padding(null, null, null, 16px);
 
     width: 290px;
@@ -49,7 +49,6 @@
 
     @media screen and (min-width: 1200px) {
       @include flex(null, null, null, center);
-      @include margin(20px, null, 0, null);
 
       width: 358px;
     }
@@ -60,6 +59,14 @@
 
     &::placeholder {
       color: rgba(255, 255, 255, 0.6);
+    }
+  }
+
+  &__btn {
+    @include margin(20px, null, null, null);
+
+    @media screen and (min-width: 1200px) {
+      @include margin(0, null, null, null);
     }
   }
 }
